part2/ex-2.02/todoapp-frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-frontend
  template:
    metadata:
      labels:
        app: todoapp-frontend
    spec:
      containers:
        - name: todoapp-frontend
          image: milai0/todoapp-frontend:10.0
