part2/ex-2.02/todoapp-frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todoapp-frontend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
